# isk-montecarlo

./: Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
examples/: _paths.py  plot_tax.py  run_daily.py  run_monthly.py
isk_montecarlo/: __init__.py  config.py  models.py  plots.py
isk_montecarlo/examples/: run_daily.py  run_monthly.py
src/isk_montecarlo/: models.py  simulate.py  tax.py
