[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.poetry]
name = "isk-montecarlo"
version = "0.1.0"
description = ""
authors = ["Senpher <crazykronecker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
matplotlib = "==3.8.4"
numpy = ">=1.26"
tqdm = ">=4.66"
scipy = ">=1.11"
pandas = ">=2.2"
ruff = "^0.13.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
